src/scss/theme/dark/block.scss
.block.blockCover {
    .loaderWrapper { background: rgba(0,0,0,0.3); }
    .loaderWrapper {
        .loader { border-color: $colorLinePrimary; border-left-color: $colorOrange; }
    }

    .elements {
        .btn.white { background: $colorBgIcon; color: $colorPrimary; }
        .btn.white:hover { background: $colorBlack; color: $colorPrimary; }

        .btn {
			.icon.icon { background-image: url('#{$themePath}/icon/add/icon1.svg'); }
			.icon.addCover { background-image: url('#{$themePath}/icon/add/cover1.svg'); }
			.icon.layout { background-image: url('#{$themePath}/icon/add/layout1.svg'); }
			.icon.relation { background-image: url('#{$themePath}/icon/add/relation1.svg'); }
		}
    }

    .author a:hover { color: $colorOrange; }
}

.blocks {
    /* Common */

    .block {
        .icon.dnd { border-color: rgba(217, 212, 184, 0.14); }

		.emptyToggle { color: $colorSecondary; }
		.emptyToggle:hover { color: $colorPrimary; }
    }
    .block:hover > .wrapMenu > .icon.dnd { background-image: url('#{$themePath}/icon/block/menu1.svg'); }

    /* BlockIconPage */

    .block.blockIconPage {
        .iconObject { box-shadow: 0px 0px 0px 2px $colorBlack; }
    }

    /* BlockIconUser */

    .block.blockIconUser {
        .iconObject { box-shadow: 0px 0px 0px 2px $colorBlack; }
    }

	/* BlockFeatured */

	.block.blockFeatured { color: $colorSecondary; }
    .block.blockFeatured {
        .cellContent:hover, .cellContent.hover { background: $colorHoverMedium; }
    }

    /* BlockFile */

    .block.blockFile {
        .loaderWrapper { border: 0px; }
    }

	/* BlockRelation */

	.block.blockRelation {
        .cell.canEdit:hover { background: $colorHoverMedium; }
    }

    /* BlockMedia */

    .block.blockMedia {
        .loaderWrapper { border: 0px; }
        .pdfWrapper { box-shadow: 0px 0px 0px 1px $colorLinePrimary; }
    }
    .block.blockMedia.isAudio.withContent > .wrapContent { background-color: $colorHoverMedium; }

    /* BlockDataview */

    .block.blockDataview {
		.loadMore { border-color: $colorLinePrimary; }
		.loadMore {
			.icon { background-image: url('#{$themePath}/arrow/loadMore0.svg'); }
		}

		.loadMore:hover { color: $colorPrimary; }
		.loadMore:hover {
			.icon { background-image: url('#{$themePath}/arrow/loadMore1.svg'); }
		}

		.icon.edit { background-image: url('#{$themePath}/icon/dataview/button/edit0.svg'); }
		.icon.edit:hover { background-image: url('#{$themePath}/icon/dataview/button/edit1.svg'); }
        .icon.plus { background-image: url('#{$themePath}/icon/plus/menu0.svg'); }
        .icon.plus:hover { background-image: url('#{$themePath}/icon/plus/menu1.svg'); }

		.dataviewEmpty { border-color: $colorLineSecondary; }
		.dataviewEmpty {
			.button { color: $colorPrimary; }
		}

		.dataviewHead { border-color: $colorLineSecondary; }
		.dataviewHead {
			.iconWrap:hover { background-color: $colorHoverMedium; }
		}

        .dataviewControls {
            .viewItem { color: $colorSecondary; }
            .viewItem {
                .icon.arrow { background-image: url('#{$themePath}/arrow/view.svg'); }
            }
            .viewItem:hover, .viewItem.active { color: $colorPrimary; }
            .viewItem.isDragging { background: $colorHoverMedium; }

			.icon:hover, .icon.active { background-color: $colorHoverMedium; }
			.icon.btn-filter.on { background-image: url('#{$themePath}/icon/dataview/button/filter1.svg'); }
			.icon.sort.on { background-image: url('#{$themePath}/icon/dataview/button/sort1.svg'); }
        }
		.dataviewControls::after { background-color: $colorLineSecondary; }

		.dataviewSelection {
			.side.left { color: $colorPrimary; }
			.side.right {
				.element.black { color: $colorPrimary; }
				.element:hover { background-color: $colorHoverMedium; }
			}
		}

        .cellHead.isDragging { background: $colorHoverMedium; }
		.cellHead.isDragging::after { background-color: $colorHoverMedium; }

        .viewContent.viewGrid,
		.viewContent.viewList {
			.cell.add { color: $colorSecondary; }
			.cell.add {
				.btn:hover { color: $colorPrimary; }
				.btn:hover {
					.icon.plus { background-image: url('#{$themePath}/icon/plus/menu1.svg'); }
				}
			}
		}

        .viewContent.viewGrid {
            .row { box-shadow: 0px 1px $colorLineSecondary inset; }
			.row:hover { background-color: rgba(223, 221, 208, 0.04); }

			.loadMore { box-shadow: 0px 1px $colorLineSecondary inset; border-color: $colorLineSecondary; }

			.cellHead .resize .line { background-color: $colorLineSecondary; }
			.cellHead.cellKeyHover::after, 
			.cellHead.active::after,
			.cellHead.isDragging::after { background-color: rgba(223, 221, 208, 0.04); }

			.cellHead.last::after, .cellHead.active::after { background: none; }
			.cellHead.last:hover, .cellHead.last.active {
				.icon.plus { background-image: url('#{$themePath}/icon/plus/menu1.svg'); }
			}

			.cell.cellKeyHover { background-color: rgba(223, 221, 208, 0.04); }
        }

        .viewContent.viewList, .viewContent.viewGallery, .viewContent.viewBoard {
            .cellContent.isName { color: $colorPrimary; }
        }

		.viewContent.viewGallery, 
		.viewContent.viewBoard {
			.card {
				.cellContent.c-description { color: $colorPrimary; }
			}
		}

        .viewContent.viewGallery {
            .card { background: $colorBlack; border-color: $colorLineTertiary; }
			.card:hover { border-color: $colorLineSecondary; background: rgba(166, 166, 166, 0.04); }
            .card {
                .cover { border-color: $colorLinePrimary; background-color: $colorBgIcon; }
            }
        }

        .viewContent.viewBoard {
			.ghost { border-color: $colorOrange; }
            .cardContent { background: $colorBgLight; border-color: $colorLineTertiary; }
			.card.add { background: $colorBgLight; border-color: $colorLineSecondary; }

			.column {
				.head { background: $colorBlack; }
				.side.right {
					.icon:hover { background-color: $colorBgIcon; }
				}
			}
			.column.withColor {
				.head .empty { color: $colorSecondary; }
			}

			.card.add:hover, .card:hover .cardContent { border-color: $colorLinePrimary; }
			.card.add:hover {
                .icon { background-image: url('#{$themePath}/icon/plus/column1.svg'); }
            }
        }

		.content {
			.scrollWrap { background: $colorBlack; }
		}
    }

    /* BlockType */

    .block.blockType {
        .item { border-color: $colorLineSecondary; color: $colorSecondary; }
        .item.hover { background: $colorHoverMedium; }
    }

    /* BlockText */

    .block.blockText {
        kbd { background: $colorHoverMedium; color: $colorOrange; }
		lnk, obj { border-color: $colorSecondary; }
		lnk:hover, obj:hover { border-color: $colorPrimary; }
    }

    .block.blockText.textCallout > .wrapContent { background: $colorHoverMedium; }
    .block.blockText.textCode > .wrapContent > .selectable { background: $colorHoverMedium; }
	.block.blockText.textQuote > .wrapContent > .additional > .line { border-color: $colorPrimary; }

    /* BlockLink */

    .block.blockLink {
        .loading, .deleted { color: $colorSecondary; }

		.linkCard.text {
			.cardName .name { border-color: $colorLineTertiary; }
		}

		.linkCard.c48.withIcon {
			.iconObject { background-color: $colorBgIcon; }
		}

		.linkCard.card {
			.side.left, .side.right { border-color: $colorLineTertiary; }
		}
    }

	.block.blockLink:hover {
		.linkCard.text {
			.cardName .name { border-color: $colorPrimary; }
		}
		.linkCard.card {
			.side.left, .side.right { border-color: $colorLinePrimary; }
		}
	}

    /* BlockDiv */

    .block.blockDiv {
        .line { border-color: $colorSecondary; }
        .dot { background: $colorSecondary !important; }
    }

    /* BlockLatex */

    .block.blockLatex {
        .select { color: $colorPrimary; }
        .wrap.isEditing { box-shadow: 0px 0px 0px 1px $colorLinePrimary; }
        #input { background: $colorBgIcon; }
    }

    /* BlockBookmark */

    .block.blockBookmark {
		.loaderWrapper { border: 0px; }
		.deleted { color: $colorSecondary; }

        .inner { border-color: transparent; background-color: $colorHoverMedium; }
        .inner {
			.name { color: $colorPrimary; }
    	    .descr { color: $colorSecondary; }
	        .link { color: $colorSecondary; }

            .side.right { border-color: $colorLineTertiary; }
        }
    }

    /* BlockTableOfContenst */

	.block.blockTableOfContents { 
		.item { color: $colorSecondary; }
		.item:hover span { border-color: $colorDarkGrey; }
	}

	/* BlockTable */

	.block.blockTable { 
		.plusButton .icon { background-color: #42413A; background-image: url('#{$themePath}/icon/table/plus.svg'); }
		.plusButton.circle .icon { background-color: #42413A; }

		.handle { 
			.inner::before { background-color: $colorBlack; }
		}
		
		.row { border-color: $colorLinePrimary; }
		.row.isHeader {
			.cell { background-color: rgba(140, 158, 165, 0.25); }
		}

		.cell { background: $colorBlack; border-color: $colorLinePrimary; }
		.cell {
			.block { color: $colorPrimary; }

			.icon.menu:hover {
				.inner { box-shadow: 0px 0px; background-color: #484843; }
			}
		}
	}
}

